[gd_scene load_steps=16 format=3 uid="uid://b1gvmkr1ehdnk"]

[ext_resource type="Theme" uid="uid://ct16po6jdi8g1" path="res://Interface/Settings/settingsMenuButton.tres" id="1_y15td"]
[ext_resource type="Script" uid="uid://dww2iuhrehksk" path="res://Interface/Settings/settings_button.gd" id="2_etnas"]
[ext_resource type="FontFile" uid="uid://dp3oq0ou16joq" path="res://Interface/Font/VCR_OSD_MONO_1.001.ttf" id="3_2scea"]
[ext_resource type="Texture2D" uid="uid://deg4gcb0cpqi2" path="res://Interface/Settings/Textures/Chevron-Left.png" id="4_05abv"]
[ext_resource type="AudioStream" uid="uid://bebahieimis82" path="res://Interface/MainMenu/Sound/select2.wav" id="5_qh33k"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_y15td"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_etnas"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2scea"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_05abv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qh33k"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_elda1"]

[sub_resource type="Animation" id="Animation_iwa01"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ShiftL:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(362.2, 12.800003)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ShiftR:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(614.2, 12.800003)]
}

[sub_resource type="Animation" id="Animation_kgpdl"]
resource_name = "pressL"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ShiftL:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(362.2, 12.800003), Vector2(358, 12.8), Vector2(362.2, 12.800003)]
}

[sub_resource type="Animation" id="Animation_d17gp"]
resource_name = "pressR"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ShiftR:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(614.2, 12.800003), Vector2(618.2, 12.8), Vector2(614.2, 12.800003)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d17gp"]
_data = {
&"RESET": SubResource("Animation_iwa01"),
&"pressL": SubResource("Animation_kgpdl"),
&"pressR": SubResource("Animation_d17gp")
}

[node name="SettingsBox" type="Button"]
custom_minimum_size = Vector2(627.2, 44)
offset_left = 144.8
offset_top = 147.2
offset_right = 771.99994
offset_bottom = 191.20004
theme = ExtResource("1_y15td")
text = "INVERT LOOK X"
alignment = 0
script = ExtResource("2_etnas")
setting_name = "Invert Look X"
setting_description = "Invert the horizontal axis controls"
settings_root = NodePath("../../../..")
multi_option = true

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 391.19995
offset_top = 12.000001
offset_right = 585.60004
offset_bottom = 30.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_2scea")
theme_override_font_sizes/font_size = 15
text = "off"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Changed" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_qh33k")

[node name="ShiftL" type="Button" parent="."]
layout_mode = 0
offset_left = 362.2
offset_top = 12.800003
offset_right = 444.2
offset_bottom = 76.8
scale = Vector2(0.305, 0.305)
mouse_filter = 1
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_y15td")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_etnas")
theme_override_styles/hover = SubResource("StyleBoxEmpty_2scea")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_05abv")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_qh33k")
theme_override_styles/focus = SubResource("StyleBoxEmpty_elda1")
icon = ExtResource("4_05abv")

[node name="ShiftR" type="Button" parent="."]
layout_mode = 0
offset_left = 614.2
offset_top = 12.800003
offset_right = 696.2
offset_bottom = 76.8
scale = Vector2(-0.305, 0.305)
mouse_filter = 1
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_y15td")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_etnas")
theme_override_styles/hover = SubResource("StyleBoxEmpty_2scea")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_05abv")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_qh33k")
theme_override_styles/focus = SubResource("StyleBoxEmpty_elda1")
icon = ExtResource("4_05abv")

[node name="Anim" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_d17gp")
}

[connection signal="pressed" from="ShiftL" to="." method="shiftL"]
[connection signal="pressed" from="ShiftR" to="." method="shiftR"]
